--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,6 +2,7 @@ project:
   type: website
   execute-dir: project
   output-dir: docs
+  resources: [".nojekyll"]
 
 website:
   title: "Group-level effects"
